==> zhiyb/MSP430F6659_LEDMatrix/CC3000/Hardware/spi.c <==
#include <stdio.h>
#include <msp430.h>
#include "hci.h"
#include "spi.h"
#include "evnt_handler.h"
#include "macros.h"
#include "clocks.h"
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (PXOUT(CC3000_PORT) &= ~CC3000_CS)
#define DEASSERT_CS()        (PXOUT(CC3000_PORT) |= CC3000_CS)
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

long SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
	// workaround for first transaction
	ASSERT_CS();

	// ~50 micro delay
	__delay_cycles(MCLK / 1000000 * 50);

	// SPI writes first 4 bytes of data
	SpiWriteDataSynchronous(ucBuf, 4);

	__delay_cycles(MCLK / 1000000 * 50);

	SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);

	// From this point on - operate in a regular way
	sSpiInformation.ulSpiState = eSPI_STATE_IDLE;

	DEASSERT_CS();

	return(0);
}

long SpiWrite(unsigned char *pUserBuffer, unsigned short usLength)
{
	unsigned char ucPad = 0;

	// Figure out the total length of the packet in order to figure out if there
	// is padding or not
	if(!(usLength & 0x0001))
		ucPad++;

	pUserBuffer[0] = WRITE;
	pUserBuffer[1] = HI(usLength + ucPad);
	pUserBuffer[2] = LO(usLength + ucPad);
	pUserBuffer[3] = 0;
	pUserBuffer[4] = 0;

	usLength += (SPI_HEADER_SIZE + ucPad);

	// The magic number that resides at the end of the TX/RX buffer (1 byte after
	// the allocated size) for the purpose of detection of the overrun. If the
	// magic number is overwritten - buffer overrun occurred - and we will stuck
	// here forever!
	if (wlan_tx_buffer[CC3000_TX_BUFFER_SIZE - 1] != CC3000_BUFFER_MAGIC_NUMBER)
		while (1);

	if (sSpiInformation.ulSpiState == eSPI_STATE_POWERUP)
		while (sSpiInformation.ulSpiState != eSPI_STATE_INITIALIZED);

	if (sSpiInformation.ulSpiState == eSPI_STATE_INITIALIZED) {
		// This is time for first TX/RX transactions over SPI: the IRQ is down -
		// so need to send read buffer size command
		SpiFirstWrite(pUserBuffer, usLength);
	} else {
		// We need to prevent here race that can occur in case 2 back to back
		// packets are sent to the  device, so the state will move to IDLE and once
		//again to not IDLE due to IRQ
		tSLInformation.WlanInterruptDisable();

		while (sSpiInformation.ulSpiState != eSPI_STATE_IDLE);

		sSpiInformation.ulSpiState = eSPI_STATE_WRITE_IRQ;
		sSpiInformation.pTxPacket = pUserBuffer;
		sSpiInformation.usTxPacketLength = usLength;

		// Assert the CS line and wait till SSI IRQ line is active and then
		// initialize write operation
		ASSERT_CS();

		// Re-enable IRQ - if it was not disabled - this is not a problem...
		tSLInformation.WlanInterruptEnable();

		// check for a missing interrupt between the CS assertion and enabling back the interrupts
		if (tSLInformation.ReadWlanInterruptPin() == 0) {
                	SpiWriteDataSynchronous(sSpiInformation.pTxPacket, sSpiInformation.usTxPacketLength);

			sSpiInformation.ulSpiState = eSPI_STATE_IDLE;

			DEASSERT_CS();
		}
	}

	// Due to the fact that we are currently implementing a blocking situation
	// here we will wait till end of transaction
	while (eSPI_STATE_IDLE != sSpiInformation.ulSpiState);

	return(0);
}

void SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
	while (size--) {
		while (!(TXBufferIsEmpty()));
		UCB2TXBUF = *data++;
		while (!(RXBufferIsEmpty()));
		UCB2RXBUF;
	}
}

void SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
	long i = 0;
	unsigned char *data_to_send = tSpiReadHeader;

	for (i = 0; i < size; i++) {
		while (!(TXBufferIsEmpty()));
		//Dummy write to trigger the clock
		UCB2TXBUF = data_to_send[0];
		while (!(RXBufferIsEmpty()));
		data[i] = UCB2RXBUF;
	}
}
