==> microbuilder/LPC11U_LPC13U_CodeBase/src/drivers/rf/wifi/cc3000/spi.c <==
#include "projectconfig.h"
#include "spi.h"
#include "hostdriver/hci.h"
#include "hostdriver/evnt_handler.h"
#include "core/gpio/gpio.h"
#include "core/delay/delay.h"
  #include "core/ssp1/ssp1.h"
  #include "core/ssp0/ssp0.h"
#define READ                            (3)
#define WRITE                           (1)
#define HI(value)                       (((value) & 0xFF00) >> 8)
#define LO(value)                       ((value) & 0x00FF)
#define CC3000_ASSERT_CS                do { LPC_GPIO->CLR[CFG_CC3000_CS_PORT] = (1 << CFG_CC3000_CS_PIN); } while(0)
#define CC3000_DEASSERT_CS              do { LPC_GPIO->SET[CFG_CC3000_CS_PORT] = (1 << CFG_CC3000_CS_PIN); } while(0)
#define HEADERS_SIZE_EVNT               (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE                 (5)
#define eSPI_STATE_POWERUP              (0)
#define eSPI_STATE_INITIALIZED          (1)
#define eSPI_STATE_IDLE                 (2)
#define eSPI_STATE_WRITE_IRQ            (3)
#define eSPI_STATE_WRITE_FIRST_PORTION  (4)
#define eSPI_STATE_WRITE_EOT            (5)
#define eSPI_STATE_READ_IRQ             (6)
#define eSPI_STATE_READ_FIRST_PORTION   (7)
#define eSPI_STATE_READ_EOT             (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

long SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
  /* Workaround for the first transaction */
  CC3000_ASSERT_CS;

  /* SPI writes first 4 bytes of data */
  delay(1);
  SpiWriteDataSynchronous(ucBuf, 4);
  delay(1);

  SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);

  /* From this point on - operate in a regular manner */
  sSpiInformation.ulSpiState = eSPI_STATE_IDLE;

  CC3000_DEASSERT_CS;

  return(0);
}

long SpiWrite(unsigned char *pUserBuffer, unsigned short usLength)
{
  unsigned char ucPad = 0;

  /* Figure out the total length of the packet in order to figure out if
   * there is padding or not */
  if(!(usLength & 0x0001))
  {
    ucPad++;
  }

  pUserBuffer[0] = WRITE;
  pUserBuffer[1] = HI(usLength + ucPad);
  pUserBuffer[2] = LO(usLength + ucPad);
  pUserBuffer[3] = 0;
  pUserBuffer[4] = 0;

  usLength += (SPI_HEADER_SIZE + ucPad);

/* The magic number that resides at the end of the TX/RX buffer (1 byte after
 * the allocated size) for the purpose of detection of the overrun. The
 * location of the memory where the magic number resides shall never be
 * written. In case it is written - an overrun occured and either receive
 * function or send function will be stuck forever. */
  if (wlan_tx_buffer[CC3000_TX_BUFFER_SIZE - 1] != CC3000_BUFFER_MAGIC_NUMBER)
  {
    while (1);
  }

  if (sSpiInformation.ulSpiState == eSPI_STATE_POWERUP)
  {
    while (sSpiInformation.ulSpiState != eSPI_STATE_INITIALIZED);
  }

  if (sSpiInformation.ulSpiState == eSPI_STATE_INITIALIZED)
  {
    /* This is time for first TX/RX transactions over SPI: the IRQ is down
     * - so we need to send read buffer size command */
    SpiFirstWrite(pUserBuffer, usLength);
  }
  else
  {
    /* We need to prevent a race condition here that can occur in case two
     * back to back packets are senr to the device, so the state will move
     * to IDLE and once again to not IDLE due to IRQ */
    tSLInformation.WlanInterruptDisable();

    while (sSpiInformation.ulSpiState != eSPI_STATE_IDLE);

    sSpiInformation.ulSpiState = eSPI_STATE_WRITE_IRQ;
    sSpiInformation.pTxPacket = pUserBuffer;
    sSpiInformation.usTxPacketLength = usLength;

    /* Assert the CS line and wait till SSI IRQ line is active and then
     * initialize write operation */
    CC3000_ASSERT_CS;

    /* Re-enable IRQ - if it was not disabled - this is not a problem... */
    tSLInformation.WlanInterruptEnable();

    /* Check for a missing interrupt between the CS assertion and re-enabling
     * the interrupts */
    if (tSLInformation.ReadWlanInterruptPin() == 0)
    {
      SpiWriteDataSynchronous(sSpiInformation.pTxPacket, sSpiInformation.usTxPacketLength);

      sSpiInformation.ulSpiState = eSPI_STATE_IDLE;

      CC3000_DEASSERT_CS;
    }
  }

  /* Due to the fact that we are currently implementing a blocking situation
   * here we will wait till end of transaction */
  while (eSPI_STATE_IDLE != sSpiInformation.ulSpiState);

  return(0);
}

void SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
  unsigned char dummy = dummy;
  while (size)
  {
    /* TX */
    #if CFG_CC3000_SPI_PORT == 1
      while ((LPC_SSP1->SR & (SSP1_SR_TNF_NOTFULL | SSP1_SR_BSY_BUSY)) != SSP1_SR_TNF_NOTFULL);
      LPC_SSP1->DR = *data;
    #else
      while ((LPC_SSP0->SR & (SSP0_SR_TNF_NOTFULL | SSP0_SR_BSY_BUSY)) != SSP0_SR_TNF_NOTFULL);
      LPC_SSP0->DR = *data;
    #endif

    /* RX */
    #if CFG_CC3000_SPI_PORT == 1
      while ((LPC_SSP1->SR & (SSP1_SR_BSY_BUSY|SSP1_SR_RNE_NOTEMPTY)) != SSP1_SR_RNE_NOTEMPTY);
      dummy = LPC_SSP1->DR;
    #else
      while ((LPC_SSP0->SR & (SSP0_SR_BSY_BUSY|SSP0_SR_RNE_NOTEMPTY)) != SSP0_SR_RNE_NOTEMPTY);
      dummy = LPC_SSP0->DR;
    #endif

    size--;
    data++;
  }
}

void SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
  long i = 0;
  unsigned char *data_to_send = tSpiReadHeader;

  for (i = 0; i < size; i ++)
  {
    /* Dummy write */
    #if CFG_CC3000_SPI_PORT == 1
      while ((LPC_SSP1->SR & (SSP1_SR_TNF_NOTFULL | SSP1_SR_BSY_BUSY)) != SSP1_SR_TNF_NOTFULL);
      LPC_SSP1->DR = data_to_send[0];
    #else
      while ((LPC_SSP0->SR & (SSP0_SR_TNF_NOTFULL | SSP0_SR_BSY_BUSY)) != SSP0_SR_TNF_NOTFULL);
      LPC_SSP0->DR = data_to_send[0];
    #endif

    /* RX */
    #if CFG_CC3000_SPI_PORT == 1
      while ( (LPC_SSP1->SR & (SSP1_SR_BSY_BUSY|SSP1_SR_RNE_NOTEMPTY)) != SSP1_SR_RNE_NOTEMPTY );
      data[i] = LPC_SSP1->DR;
    #else
      while ( (LPC_SSP0->SR & (SSP0_SR_BSY_BUSY|SSP0_SR_RNE_NOTEMPTY)) != SSP0_SR_RNE_NOTEMPTY );
      data[i] = LPC_SSP0->DR;
    #endif
  }
}
